--- a/app/views/snippets/index.html.erb
+++ b/app/views/snippets/index.html.erb
@@ -5,14 +5,17 @@
     <% @snippets.each do |snippet| %>
     <% if snippet.is_private != "true" || (can? :manage, snippet)%>
     <tr style="border: 1px solid grey;">
-    <td>
-      <%= link_to snippet.title, snippet_path(snippet) %> <span class="label label-warning"><%= snippet.language.kind %></span>
-      <% if snippet.is_private =="true" %>
-      <span class="label label-danger">private</span>
-      <% end %>
-    </td>
-  </tr>
-  <% end %>
-  <% end %>
-</table>
+      <td>
+        <%= link_to snippet.title, snippet_path(snippet) %> <span class="label label-warning"><%= snippet.language.kind %></span>
+        <% if snippet.is_private =="true" %>
+        <span class="label label-danger">private</span>
+        <% end %>
+      </td>
+    </tr>
+    <% end %>
+    <% end %>
+  </table>
+  <div id="infinite-scrolling">
+    <%= will_paginate %>
+  </div>
 </div>
