display owner of snippet on index page

--- a/app/views/snippets/index.html.erb
+++ b/app/views/snippets/index.html.erb
@@ -10,6 +10,8 @@
         <% if snippet.is_private =="true" %>
         <span class="label label-danger">private</span>
         <% end %>
+        <br />
+        <%= snippet.user.full_name %>
       </td>
     </tr>
     <% end %>
